--- a/Level5/style.css
+++ b/Level5/style.css
@@ -1,15 +1,35 @@
 body{
     text-align: center;
 }
-#container{
-    width: 800px;
-    height: 200px;
-    display: flex;
-    flex-direction: row-reverse;
-}
 div{
-    height: 100px;
-    width: 100px;
+    /* height: 20px;
+    width: 40px; */
+    height: 50px;
+    width: 50px;
     border: 2px solid black;
     display: inline-block;
+}
+#container{
+    width: 800px;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+    /* width: 100px;
+    height: 600px; */
+    /* display: block;
+    display: flex;
+    flex-wrap: wrap;
+    align-content:end ; */
+    /* align-items: center; */
+    /* flex-direction: row;  */
+    /* justify-content: space-around; */
+}
+#box4{
+    /* align-self: flex-end; */
+    flex-grow: 2;
+}
+#box3{
+    flex-grow: 1;
 }
