--- a/Level7/style.css
+++ b/Level7/style.css
@@ -8,7 +8,8 @@
     animation-duration: 1s;
     /* animation-timing-function: ease-in-out; */
     animation-delay: 0s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 5;
+    /* you can also use animation-iteration-count: infinite; */
     animation-direction: alternate-reverse;
 }
 @keyframes myAnimation{
